# mech_games

./: LICENSE  README.md  pyproject.toml
mech_games/: Game.py
tests/: test_importing.py
